stupidity.txt
> Task :compileJava
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\core\ScanController.java:69: error: method getTopY in class World cannot be applied to given types;
        int maxY = world.getTopY();
                        ^
  required: Type,int,int
  found:    no arguments
  reason: actual and formal argument lists differ in length
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\core\ScanTask.java:38: error: method getTopY in class World cannot be applied to given types;
        int maxY = world.getTopY();
                        ^
  required: Type,int,int
  found:    no arguments
  reason: actual and formal argument lists differ in length
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\AdvancedGuiScreen.java:107: error: method renderBackground in class Screen cannot be applied to given types;
        renderBackground(context);
        ^
  required: DrawContext,int,int,float
  found:    DrawContext
  reason: actual and formal argument lists differ in length
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\BlockSelectionScreen.java:82: error: no suitable method found for comparing(BlockEntry::name)
        blockEntries.sort(Comparator.comparing(BlockEntry::name));
                                    ^
    method Comparator.<T#1,U#1>comparing(Function<? super T#1,? extends U#1>,Comparator<? super U#1>) is not applicable
      (cannot infer type-variable(s) T#1,U#1
        (actual and formal argument lists differ in length))
    method Comparator.<T#2,U#2>comparing(Function<? super T#2,? extends U#2>) is not applicable
      (inference variable U#2 has incompatible bounds
        upper bounds: Comparable<? super U#2>
        lower bounds: Text)
  where T#1,U#1,T#2,U#2 are type-variables:
    T#1 extends Object declared in method <T#1,U#1>comparing(Function<? super T#1,? extends U#1>,Comparator<? super U#1>)
    U#1 extends Object declared in method <T#1,U#1>comparing(Function<? super T#1,? extends U#1>,Comparator<? super U#1>)
    T#2 extends Object declared in method <T#2,U#2>comparing(Function<? super T#2,? extends U#2>)
    U#2 extends Comparable<? super U#2> declared in method <T#2,U#2>comparing(Function<? super T#2,? extends U#2>)
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\BlockSelectionScreen.java:104: error: method renderBackground in class Screen cannot be applied to given types;
        renderBackground(context);
        ^
  required: DrawContext,int,int,float
  found:    DrawContext
  reason: actual and formal argument lists differ in length
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\BlockSelectionScreen.java:131: error: BlockSelectionScreen.BlockEntryWidget is not abstract and does not override abstract method getNarration() in Entry
    private class BlockEntryWidget extends net.minecraft.client.gui.widget.AlwaysSelectedEntryListWidget.Entry<BlockEntryWidget> {
            ^
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\LogManagerScreen.java:80: error: method renderBackground in class Screen cannot be applied to given types;
        renderBackground(context);
        ^
  required: DrawContext,int,int,float
  found:    DrawContext
  reason: actual and formal argument lists differ in length
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\QuickAccessScreen.java:94: error: method renderBackground in class Screen cannot be applied to given types;
        renderBackground(context);
        ^
  required: DrawContext,int,int,float
  found:    DrawContext
  reason: actual and formal argument lists differ in length
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\XRayConfigScreen.java:107: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\XRayConfigScreen.java:109: error: method renderBackground in class Screen cannot be applied to given types;
        renderBackground(matrices);
        ^
  required: DrawContext,int,int,float
  found:    MatrixStack
  reason: actual and formal argument lists differ in length
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\XRayConfigScreen.java:111: error: incompatible types: MatrixStack cannot be converted to DrawContext
        super.render(matrices, mouseX, mouseY, delta);
                     ^
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\XRayConfigScreen.java:114: error: cannot find symbol
        drawCenteredTextWithShadow(matrices, textRenderer, title, width / 2, 20, 0xFFFFFF);
        ^
  symbol:   method drawCenteredTextWithShadow(MatrixStack,TextRenderer,Text,int,int,int)
  location: class XRayConfigScreen
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\XRayConfigScreen.java:118: error: cannot find symbol
        drawCenteredTextWithShadow(matrices, textRenderer, "Status: " + status, width / 2, 40, 0xFFFFFF);
        ^
  symbol:   method drawCenteredTextWithShadow(MatrixStack,TextRenderer,String,int,int,int)
  location: class XRayConfigScreen
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\XRayConfigScreen.java:125: error: cannot find symbol
        drawCenteredTextWithShadow(matrices, textRenderer,
        ^
  symbol:   method drawCenteredTextWithShadow(MatrixStack,TextRenderer,String,int,int,int)
  location: class XRayConfigScreen
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\utils\BlockUtils.java:19: error: constructor Identifier in class Identifier cannot be applied to given types;
        return Registries.BLOCK.get(new Identifier(blockId));
                                    ^
  required: String,String
  found:    String
  reason: actual and formal argument lists differ in length
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\xray\XRayRenderer.java:29: error: invalid method reference
        RenderSystem.setShader(GameRenderer::getPositionColorProgram);
                               ^
  cannot find symbol
    symbol:   method getPositionColorProgram()
    location: class GameRenderer
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\xray\XRayRenderer.java:32: error: cannot find symbol
        BufferBuilder buffer = tessellator.getBuffer();
                                          ^
  symbol:   method getBuffer()
  location: variable tessellator of type Tessellator
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\xray\XRayRenderer.java:37: error: cannot find symbol
        buffer.begin(VertexFormat.DrawMode.DEBUG_LINES, VertexFormats.POSITION_COLOR);
              ^
  symbol:   method begin(DrawMode,VertexFormat)
  location: variable buffer of type BufferBuilder
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\xray\XRayRenderer.java:45: error: cannot find symbol
        tessellator.draw();
                   ^
  symbol:   method draw()
  location: variable tessellator of type Tessellator
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
19 errors

> Task :compileJava FAILED
